# ChatSpark

./: .env.example  .gitignore  LICENSE  README.md  chatspark-manual.html  docs  package-lock.json  package.json
docs/: manual.html
effect-craft/: editor.css  editor.js  index.html  particle-engine.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: chatMonitor.ts  configManager.ts  server.ts  standalone.ts
src/renderer/display/: display.js  index.html  particle-engine.js  styles.css
src/renderer/modeSelect/: index.html  styles.css
src/renderer/settingsMCV/: index.html  settingsMCV.js  styles.css
src/renderer/settingsPanel/: index.html  settingsPanel.js
src/renderer/settingsTwitch/: index.html  settingsTwitch.js  styles.css
