[package]
name = "twitch-overlay"
version = "0.1.0"
description = "Twitch chat monitoring OBS overlay tool"
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "shell-sidecar"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
